# oathpp

./: CMakeLists.txt  README.md  oath++.cpp  oath++.hpp
test/: basic.cpp  coding.cpp  hotp_algo.cpp  hotp_validate.cpp  totp_algo.cpp  totp_validate.cpp  usersfile.cpp
